# Thulium

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  hubconf.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
config/augmentations/: standard.yaml  strong.yaml
config/eval/: eval_latin_multilingual.yaml
config/lm/: arabic_char_ngram.yaml  cjk_char_ngram.yaml  cyrillic_char_ngram.yaml  latin_char_ngram.yaml
config/models/: htr_cnn_lstm_ctc_base.yaml  htr_cnn_lstm_ctc_large.yaml  htr_cnn_lstm_ctc_small.yaml  htr_cnn_lstm_ctc_tiny.yaml  htr_cnn_transformer_ctc_base.yaml  htr_cnn_transformer_ctc_large.yaml  htr_cnn_transformer_ctc_small.yaml  htr_cnn_transformer_ctc_tiny.yaml  htr_vit_transformer_seq2seq_base.yaml  htr_vit_transformer_seq2seq_large.yaml  htr_vit_transformer_seq2seq_small.yaml  htr_vit_transformer_seq2seq_tiny.yaml
config/pipelines/: htr_az_default.yaml  htr_en_default.yaml  htr_multi_latin.yaml  htr_nordic_latin.yaml  htr_tr_default.yaml
config/training/: self_supervised_vit.yaml  train_cnn_lstm_base_multilingual.yaml  train_transformer_base_multilingual.yaml  train_vit_transformer_seq2seq_multilingual.yaml
docs/: README.md  architecture.md  getting_started.md  index.md  requirements.txt
docs/api/: api_high_level.md  api_low_level.md  cli_usage.md  reference.md
docs/assets/: custom.css
docs/development/: dev_guide.md  style_guide.md
docs/evaluation/: benchmarks.md  metrics.md  robustness.md
docs/models/: language_support.md  model_zoo.md
docs/theory/: htr_foundations.md
docs/training/: self_supervised.md  training_guide.md
docs/xai/: attention_and_saliency.md  error_analysis.md
examples/: 00_quickstart.ipynb  01_basic_recognition.ipynb  02_benchmarking.ipynb  03_error_analysis.ipynb  README.md  recognize_multilingual.py
tests/: conftest.py  test_basic.py  test_decoders.py  test_language_models.py  test_language_profiles.py  test_metrics.py  test_normalization.py  test_training_utils.py
thulium/: __init__.py  py.typed  version.py
thulium/api/: __init__.py  recognition.py  recognize.py  types.py
thulium/cli/: __init__.py  main.py
thulium/config/: __init__.py
thulium/data/: __init__.py  collate.py  datasets.py  language_profiles.py  loaders.py  noise_injection.py  samplers.py  transforms.py
thulium/evaluation/: __init__.py  benchmarking.py  calibration.py  metrics.py  reporting.py  robustness.py
thulium/models/: __init__.py
thulium/pipeline/: __init__.py  config.py  form_pipeline.py  htr_pipeline.py  multi_language_pipeline.py  segmentation_pipeline.py
thulium/text/: __init__.py  normalization.py
thulium/training/: __init__.py  checkpointing.py  early_stopping.py  trainer.py
thulium/xai/: __init__.py  (+4 more)
(+22 files in other folders)
